--- a/gif/package.json
+++ b/gif/package.json
@@ -12,8 +12,7 @@
     "web-vitals": "^2.1.3"
   },
   "scripts": {
-    "start:staging": "emv-cmd -e development react-scripts start",
-    "start:prod": "emv-cmd -e production react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
